# swagger.json
@@ -40,6 +40,33 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"SleeperSeason": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"leagueId": {
+						"type": "number",
+						"format": "double"
+					},
+					"year": {
+						"type": "number",
+						"format": "double"
+					},
+					"sleeperLeagueId": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"leagueId",
+					"year",
+					"sleeperLeagueId"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"Season": {
 				"properties": {
 					"id": {
@@ -328,6 +355,106 @@
 				}
 			}
 		},
+		"/seasons/sleeper": {
+			"post": {
+				"operationId": "CreateSleeperSeason",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "number",
+									"format": "double"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"sleeperLeagueId": {
+										"type": "string"
+									},
+									"leagueId": {
+										"type": "number",
+										"format": "double"
+									}
+								},
+								"required": [
+									"sleeperLeagueId",
+									"leagueId"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/seasons/sleeper/{seasonId}": {
+			"get": {
+				"operationId": "FindSleeperSeasonBySeasonId",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/SleeperSeason"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "seasonId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/seasons/sleeper/external-id/{sleeperLeagueId}": {
+			"get": {
+				"operationId": "FindSleeperSeasonBySleeperLeagueId",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/SleeperSeason"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "sleeperLeagueId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/seasons/{id}": {
 			"get": {
 				"operationId": "FindSeasonById",
@@ -357,7 +484,7 @@
 				]
 			}
 		},
-		"/seasons/{leagueId}/{year}": {
+		"/seasons/base/{leagueId}/{year}": {
 			"get": {
 				"operationId": "FindSeasonByLeagueAndYear",
 				"responses": {
